{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 5431,
  "lineage": "02500a01-da88-847a-a97a-614b70dba248",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2instances_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:security-group/sg-0222b10d410d0899a",
            "description": "Security Group for EC2 Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet output instances access",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet output instances access",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0222b10d410d0899a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Access to 80 port from load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-066d0e3183744793f"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Access to 80 port from load balancer",
                "from_port": 9990,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-066d0e3183744793f"
                ],
                "self": false,
                "to_port": 9990
              }
            ],
            "name": "SG-ec2",
            "name_prefix": "",
            "owner_id": "002580115597",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "environment": "DEV",
              "language": "terraform",
              "project": "Example_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_service_sg.aws_security_group.this",
            "module.alb_service_sg.aws_security_group.this_name_prefix",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_rules",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_self",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_rules",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.egress_rules",
            "module.alb_service_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.egress_with_self",
            "module.alb_service_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.ingress_rules",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_self",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "aws-balancer-002580115597",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:002580115597:loadbalancer/app/balancer/90b4a9d5bd0d5f66",
            "arn_suffix": "app/balancer/90b4a9d5bd0d5f66",
            "dns_name": "balancer-711584659.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:002580115597:loadbalancer/app/balancer/90b4a9d5bd0d5f66",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "balancer",
            "security_groups": [
              "sg-066d0e3183744793f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0470c69da018f2e8d"
              },
              {
                "subnet_id": "subnet-0a54ccee72dd727be"
              },
              {
                "subnet_id": "subnet-0f47384593bb99fac"
              }
            ],
            "subnets": [
              "subnet-0470c69da018f2e8d",
              "subnet-0a54ccee72dd727be",
              "subnet-0f47384593bb99fac"
            ],
            "tags": {
              "Name": "balancer",
              "functionality": "application"
            },
            "tags_all": {
              "Name": "balancer",
              "environment": "DEV",
              "functionality": "application",
              "language": "terraform",
              "project": "Example_1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-012ec152dc2028d73",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb_service_sg.aws_security_group.this",
            "module.alb_service_sg.aws_security_group.this_name_prefix",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_rules",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_self",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_rules",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.egress_rules",
            "module.alb_service_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.egress_with_self",
            "module.alb_service_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.ingress_rules",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_self",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.s3_bucket.aws_s3_bucket.this",
            "module.s3_bucket.aws_s3_bucket_ownership_controls.this",
            "module.s3_bucket.aws_s3_bucket_policy.this",
            "module.s3_bucket.aws_s3_bucket_public_access_block.this",
            "module.s3_bucket.data.aws_elb_service_account.this",
            "module.s3_bucket.data.aws_iam_policy_document.combined",
            "module.s3_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "module.s3_bucket.data.aws_iam_policy_document.elb_log_delivery",
            "module.s3_bucket.data.aws_iam_policy_document.lb_log_delivery",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:002580115597:listener/app/balancer/90b4a9d5bd0d5f66/833a955527c4a8d8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:002580115597:targetgroup/pref-20211015212730634500000003/15e20b2cb3a851f9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:002580115597:listener/app/balancer/90b4a9d5bd0d5f66/833a955527c4a8d8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:002580115597:loadbalancer/app/balancer/90b4a9d5bd0d5f66",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "functionality": "application"
            },
            "tags_all": {
              "environment": "DEV",
              "functionality": "application",
              "language": "terraform",
              "project": "Example_1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb_service_sg.aws_security_group.this",
            "module.alb_service_sg.aws_security_group.this_name_prefix",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_rules",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_self",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_rules",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.egress_rules",
            "module.alb_service_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.egress_with_self",
            "module.alb_service_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.ingress_rules",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_self",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.s3_bucket.aws_s3_bucket.this",
            "module.s3_bucket.aws_s3_bucket_ownership_controls.this",
            "module.s3_bucket.aws_s3_bucket_policy.this",
            "module.s3_bucket.aws_s3_bucket_public_access_block.this",
            "module.s3_bucket.data.aws_elb_service_account.this",
            "module.s3_bucket.data.aws_iam_policy_document.combined",
            "module.s3_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "module.s3_bucket.data.aws_iam_policy_document.elb_log_delivery",
            "module.s3_bucket.data.aws_iam_policy_document.lb_log_delivery",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:002580115597:targetgroup/pref-20211015212730634500000003/15e20b2cb3a851f9",
            "arn_suffix": "targetgroup/pref-20211015212730634500000003/15e20b2cb3a851f9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:002580115597:targetgroup/pref-20211015212730634500000003/15e20b2cb3a851f9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-20211015212730634500000003",
            "name_prefix": "pref-",
            "port": 9990,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pref-",
              "functionality": "application"
            },
            "tags_all": {
              "Name": "pref-",
              "environment": "DEV",
              "functionality": "application",
              "language": "terraform",
              "project": "Example_1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "dependencies": [
            "module.alb_service_sg.aws_security_group.this",
            "module.alb_service_sg.aws_security_group.this_name_prefix",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_rules",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_self",
            "module.alb_service_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_rules",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.alb_service_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.egress_rules",
            "module.alb_service_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.egress_with_self",
            "module.alb_service_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.alb_service_sg.aws_security_group_rule.ingress_rules",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_self",
            "module.alb_service_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.s3_bucket.aws_s3_bucket.this",
            "module.s3_bucket.aws_s3_bucket_ownership_controls.this",
            "module.s3_bucket.aws_s3_bucket_policy.this",
            "module.s3_bucket.aws_s3_bucket_public_access_block.this",
            "module.s3_bucket.data.aws_elb_service_account.this",
            "module.s3_bucket.data.aws_iam_policy_document.combined",
            "module.s3_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "module.s3_bucket.data.aws_iam_policy_document.elb_log_delivery",
            "module.s3_bucket.data.aws_iam_policy_document.lb_log_delivery",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_service_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:security-group/sg-066d0e3183744793f",
            "description": "Security Group for user-service with custom ports",
            "egress": [],
            "id": "sg-066d0e3183744793f",
            "ingress": [],
            "name": "user-service-20211015212537731400000001",
            "name_prefix": "user-service-",
            "owner_id": "002580115597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user-service"
            },
            "tags_all": {
              "Name": "user-service",
              "environment": "DEV",
              "language": "terraform",
              "project": "Example_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "user_service port",
            "from_port": 0,
            "id": "sgrule-956300216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-066d0e3183744793f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_service_sg.aws_security_group.this",
            "module.alb_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "user-service port",
            "from_port": 80,
            "id": "sgrule-3980181377",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-066d0e3183744793f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_service_sg.aws_security_group.this",
            "module.alb_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bf65844b812789b3",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-86-32-42.us-west-2.compute.amazonaws.com",
            "public_ip": "35.86.32.42",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "networking-us-west-2a",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-us-west-2a",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:internet-gateway/igw-0c86ad9eb5fc590bc",
            "id": "igw-0c86ad9eb5fc590bc",
            "owner_id": "002580115597",
            "tags": {
              "Name": "networking",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf65844b812789b3",
            "connectivity_type": "public",
            "id": "nat-0b255c85a4548ce29",
            "network_interface_id": "eni-023084017928278de",
            "private_ip": "10.4.1.69",
            "public_ip": "35.86.32.42",
            "subnet_id": "subnet-0a54ccee72dd727be",
            "tags": {
              "Name": "networking-us-west-2a",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-us-west-2a",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b2f34f2b010435b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b255c85a4548ce29",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b2f34f2b010435b6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c86ad9eb5fc590bc",
            "id": "r-rtb-0347f99dbc65f645c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0347f99dbc65f645c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:route-table/rtb-0b2f34f2b010435b6",
            "id": "rtb-0b2f34f2b010435b6",
            "owner_id": "002580115597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "networking-private",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-private",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:route-table/rtb-0347f99dbc65f645c",
            "id": "rtb-0347f99dbc65f645c",
            "owner_id": "002580115597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "networking-public",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-public",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00156870c7df7b804",
            "route_table_id": "rtb-0b2f34f2b010435b6",
            "subnet_id": "subnet-0a88f44061a656d97"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e902a61265b341b3",
            "route_table_id": "rtb-0b2f34f2b010435b6",
            "subnet_id": "subnet-04d52b625d96f1039"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e36d69878b40b75",
            "route_table_id": "rtb-0b2f34f2b010435b6",
            "subnet_id": "subnet-077fc5ebeecea938f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d609097c4c3aba12",
            "route_table_id": "rtb-0347f99dbc65f645c",
            "subnet_id": "subnet-0a54ccee72dd727be"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0670ba17df55255ad",
            "route_table_id": "rtb-0347f99dbc65f645c",
            "subnet_id": "subnet-0f47384593bb99fac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018974a483e0520eb",
            "route_table_id": "rtb-0347f99dbc65f645c",
            "subnet_id": "subnet-0470c69da018f2e8d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:subnet/subnet-0a88f44061a656d97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.4.4.0/22",
            "id": "subnet-0a88f44061a656d97",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "002580115597",
            "tags": {
              "Name": "networking-private-us-west-2a",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-private-us-west-2a",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:subnet/subnet-04d52b625d96f1039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.4.8.0/22",
            "id": "subnet-04d52b625d96f1039",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "002580115597",
            "tags": {
              "Name": "networking-private-us-west-2b",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-private-us-west-2b",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:subnet/subnet-077fc5ebeecea938f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.4.12.0/22",
            "id": "subnet-077fc5ebeecea938f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "002580115597",
            "tags": {
              "Name": "networking-private-us-west-2c",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-private-us-west-2c",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:subnet/subnet-0a54ccee72dd727be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.4.1.0/24",
            "id": "subnet-0a54ccee72dd727be",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "002580115597",
            "tags": {
              "Name": "networking-public-us-west-2a",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-public-us-west-2a",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:subnet/subnet-0f47384593bb99fac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.4.2.0/24",
            "id": "subnet-0f47384593bb99fac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "002580115597",
            "tags": {
              "Name": "networking-public-us-west-2b",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-public-us-west-2b",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:subnet/subnet-0470c69da018f2e8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.4.3.0/24",
            "id": "subnet-0470c69da018f2e8d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "002580115597",
            "tags": {
              "Name": "networking-public-us-west-2c",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking-public-us-west-2c",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            },
            "vpc_id": "vpc-012ec152dc2028d73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:002580115597:vpc/vpc-012ec152dc2028d73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0c94de9f60aba77a6",
            "default_route_table_id": "rtb-00d5e7c7f7393f818",
            "default_security_group_id": "sg-0a6d405fd8d2cac49",
            "dhcp_options_id": "dopt-323e6a4a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-012ec152dc2028d73",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d5e7c7f7393f818",
            "owner_id": "002580115597",
            "tags": {
              "Name": "networking",
              "functionality": "networking"
            },
            "tags_all": {
              "Name": "networking",
              "environment": "DEV",
              "functionality": "networking",
              "language": "terraform",
              "project": "Example_1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}